welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:4: error: not found: value somme
    somme=somme+nums(i)
    ^averageValue:6: error: not found: value somme
  return somme/nums.length
         ^