welcome.lessons.welcome.array.search.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
  var sommme=0
  for (i<-0 to nums.length -1){
    somme=somme+nums(i)
  }
  return somme/nums.length
}
  